...
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/phone_shared_margin_xl"
      android:layout_marginTop="@dimen/phone_shared_margin_large"
      android:layout_marginEnd="@dimen/phone_shared_margin_xl"
      android:layout_marginBottom="@dimen/phone_shared_margin_xl"
      android:fontFamily="sans-serif-medium"
      android:text="@string/create_profile_activity_profile_picture_prompt"
      android:textAlignment="center"
      android:textColor="@color/component_color_onboarding_shared_text_color"
      android:textSize="@dimen/onboarding_shared_text_size_medium"
      app:layout_constraintBottom_toBottomOf="@id/create_profile_user_image_view"
      app:layout_constraintEnd_toEndOf="@id/create_profile_user_image_view"
      app:layout_constraintStart_toStartOf="@id/create_profile_user_image_view"
...
      android:textSize="@dimen/onboarding_shared_text_size_large"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_profile_user_image_view" />

    <TextView
      android:id="@+id/create_profile_nickname_label"
      style="@style/NicknameLabelStyle"
      android:layout_marginStart="@dimen/phone_shared_margin_xl"
      android:layout_marginTop="@dimen/phone_shared_margin_medium"
      android:labelFor="@id/create_profile_nickname_edittext"
      android:text="@string/create_profile_activity_nickname_label"
      app:layout_constraintBottom_toTopOf="@id/create_profile_nickname_edittext"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_profile_title" />

    <EditText
      android:id="@+id/create_profile_nickname_edittext"
...
      android:textSize="@dimen/onboarding_shared_text_size_medium"
      app:layout_constraintStart_toStartOf="parent"
      app:disableAutofill="@{true}"
      app:layout_constraintTop_toBottomOf="@id/create_profile_nickname_label" />

    <TextView
      android:id="@+id/create_profile_nickname_error"
      style="@style/OnboardingErrorStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/phone_shared_margin_xl"
      android:layout_marginTop="@dimen/phone_shared_margin_small"
      android:layout_marginEnd="@dimen/phone_shared_margin_medium"
...
          android:maxLength="3"
          android:text="@={viewModel.inputConfirmPin}" />
    </com.google.android.material.textfield.TextInputLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
      android:id="@+id/onboarding_steps_count"
      style="@style/OnboardingStepCountStyle"
      android:layout_marginBottom="@dimen/phone_shared_margin_medium"
      android:text="@string/onboarding_step_count_three"
      app:layout_constraintBottom_toTopOf="@id/onboarding_navigation_back"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

    <Button
      android:id="@+id/onboarding_navigation_back"
      style="@style/OnboardingNavigationSecondaryButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/phone_shared_margin_medium"
      android:text="@string/onboarding_navigation_back"
      android:textColor="@color/component_color_onboarding_create_profile_back_button_text_color"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@id/onboarding_navigation_continue"
      app:layout_constraintStart_toStartOf="parent" />

    <Button
      android:id="@+id/onboarding_navigation_continue"
      style="@style/OnboardingNavigationPrimaryButton"
      android:layout_width="0dp"
...
